Make the sun emoji consistent

--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 
     <!-- Welcome Section -->
     <section id="welcome" class="relative w-full bg-[var(--bee-bg)] py-20 overflow-hidden" data-aos="fade-up">
-        <div class="absolute -top-0 -left-0 text-8xl opacity-90 z-0 select-none pointer-events-none rotate-[15deg]">🌞
-        </div>
+        <div
+            class="absolute top-0 left-0 text-[80px] opacity-90 z-0 select-none pointer-events-none rotate-[15deg] leading-none">
+            🌞</div>
         <div class="max-w-6xl mx-auto px-6 flex flex-col-reverse lg:flex-row items-center gap-10 relative z-10">
             <div class="w-full lg:w-2/5 text-left space-y-6" data-aos="fade-right">
                 <h2 class="text-4xl font-bold text-[var(--bee-charcoal)] club-name">Добре дошли в детски клуб „Малката
